@@ -364,6 +364,13 @@ static RAK3172_Error_t RAK3172_BasicInit(RAK3172_t* const p_Device)
 
     esp_log_level_set("uart", ESP_LOG_NONE);
 
+    if(p_Device->Tx == p_Device->Rx)
+    {
+        ESP_LOGE(TAG, "Invalid Rx and Tx for UART!");
+
+        return RAK3172_ERR_INVALID_ARG;
+    }
+
     if(uart_driver_install(p_Device->Interface, CONFIG_RAK3172_TASK_BUFFER_SIZE * 2, CONFIG_RAK3172_TASK_BUFFER_SIZE * 2, CONFIG_RAK3172_TASK_QUEUE_LENGTH, &p_Device->Internal.EventQueue, 0) ||
        uart_param_config(p_Device->Interface, &_RAK3172_UART_Config) ||
        uart_set_pin(p_Device->Interface, p_Device->Tx, p_Device->Rx, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE) ||
